service/external-name.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: search
  name: search
spec:
  type: ExternalName
  externalName: google.com
